# openwrt-router

./: .gitignore  Cross.toml  GNUmakefile  README.md  config.example  install.sh
.github/workflows/: release.yml
configs/: guest.conf.example  untrusted.conf.example
extra-networks/: README.md  install.sh
extra-networks/configs/: guest.conf.example  untrusted.conf.example
extra-networks/kestreld-rs/: Cargo.toml
extra-networks/kestreld-rs/src/: main.rs  state.rs
extra-networks/kestreld-rs/src/data/: dhcp.rs  dns.rs  files.rs  iw.rs  logs.rs  mod.rs  neigh.rs  nft.rs  system.rs  vpn.rs  wg.rs
extra-networks/kestreld-rs/src/routes/: device.rs  mod.rs  status.rs
extra-networks/kestreld-rs/templates/: device.html  status.html
extra-networks/router-ui-rs/: Cargo.toml  Cross.toml
extra-networks/router-ui-rs/src/data/: dhcp.rs  files.rs  iw.rs  logs.rs  neigh.rs  nft.rs  wg.rs
extra-networks/tools/: _lib.sh  approve-access.cgi  approve-join.cgi  bandwidth-check.sh  check-access-log.sh  check-vpn.sh  check-wan.sh  device.cgi  digest.sh  expose-port.sh  guest-info.sh  network.cgi  notify-reboot.sh  oui-update.sh  qr.cgi  qr.sh  regen-inspect.sh  rotate-password.cgi  rotate-password.sh  status.cgi  unexpose-port.sh  (+3 more)
split-routing/: install.sh  local-dns-pornsites.txt  local-dns-sites.txt  local-dns-torrentsites.txt  local-dns-uk_sites.txt  local-resolve-torrenttrackers.txt  nft-resolve  vpn-bg.conf  vpn-uk.conf
tools/: access-schedule.sh  allow-service.sh  approve-access.cgi  rotate-password.cgi  rotate-password.sh  status.cgi  status.sh  uninstall.sh
(+20 files in other folders)
