[package]
name = "kestreld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kestreld"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
